--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.18.0"
   },
   "scripts": {
-    "test": "mocha tests/unit/"
+    "test": "mocha"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "https":"1.0.0",
+    "xmldom":"0.1.27"
   }
 }
